# arcagi3-worldmodel

./: .env.template  .gitignore  README.md  client.py  data_models.py  env.py  pyproject.toml  train.py
bibliography/: README.md  disagreement.md  dreamerv1.md  dreamerv2.md  dreamerv3.md  icm.md  plan2explore.md  planet.md  rnd.md
tests/: test_env.py  test_swm_integration.py  test_train.py
